syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message RemoveDevicesFromFirmwareHubRequest {
	OpFirmwareHub firmware_hub = 1;
	repeated OpDevice devices = 2;
}
